bug fixes and updates for v0.5

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -28,172 +28,9 @@
     {
      "data": {
       "text/html": [
-       "<script charset=\"utf-8\">(function ($, undefined) {\n",
-       "\n",
-       "    function createElem(tag, attr, content) {\n",
-       "\t// TODO: remove jQuery dependency\n",
-       "\tvar el = $(\"<\" + tag + \"/>\").attr(attr);\n",
-       "\tif (content) {\n",
-       "\t    el.append(content);\n",
-       "\t}\n",
-       "\treturn el[0];\n",
-       "    }\n",
-       "\n",
-       "    // A widget must expose an id field which identifies it to the backend,\n",
-       "    // an elem attribute which is will be added to the DOM, and\n",
-       "    // a getState() method which returns the value to be sent to the backend\n",
-       "    // a sendUpdate() method which sends its current value to the backend\n",
-       "    var Widget = {\n",
-       "\tid: undefined,\n",
-       "\telem: undefined,\n",
-       "\tlabel: undefined,\n",
-       "\tgetState: function () {\n",
-       "\t    return this.elem.value;\n",
-       "\t},\n",
-       "\tsendUpdate: undefined\n",
-       "    };\n",
-       "\n",
-       "    var Slider = function (typ, id, init) {\n",
-       "\tvar attr = { type:  \"range\",\n",
-       "\t\t     value: init.value,\n",
-       "\t\t     min:   init.min,\n",
-       "\t\t     max:   init.max,\n",
-       "\t\t     step:  init.step },\n",
-       "\t    elem = createElem(\"input\", attr),\n",
-       "\t    self = this;\n",
-       "\n",
-       "\telem.onchange = function () {\n",
-       "\t    self.sendUpdate();\n",
-       "\t}\n",
-       "\n",
-       "\tthis.id = id;\n",
-       "\tthis.elem = elem;\n",
-       "\tthis.label = init.label;\n",
-       "\n",
-       "\tInputWidgets.commInitializer(this); // Initialize communication\n",
-       "    }\n",
-       "    Slider.prototype = Widget;\n",
-       "\n",
-       "    var Checkbox = function (typ, id, init) {\n",
-       "\tvar attr = { type: \"checkbox\",\n",
-       "\t\t     checked: init.value },\n",
-       "\t    elem = createElem(\"input\", attr),\n",
-       "\t    self = this;\n",
-       "\n",
-       "\tthis.getState = function () {\n",
-       "\t    return elem.checked;\n",
-       "\t}\n",
-       "\telem.onchange = function () {\n",
-       "\t    self.sendUpdate();\n",
-       "\t}\n",
-       "\n",
-       "\tthis.id = id;\n",
-       "\tthis.elem = elem;\n",
-       "\tthis.label = init.label;\n",
-       "\n",
-       "\tInputWidgets.commInitializer(this);\n",
-       "    }\n",
-       "    Checkbox.prototype = Widget;\n",
-       "\n",
-       "    var Button = function (typ, id, init) {\n",
-       "\tvar attr = { type:    \"button\",\n",
-       "\t\t     value:   init.label },\n",
-       "\t    elem = createElem(\"input\", attr),\n",
-       "\t    self = this;\n",
-       "\tthis.getState = function () {\n",
-       "\t    return null;\n",
-       "\t}\n",
-       "\telem.onclick = function () {\n",
-       "\t    self.sendUpdate();\n",
-       "\t}\n",
-       "\n",
-       "\tthis.id = id;\n",
-       "\tthis.elem = elem;\n",
-       "\tthis.label = init.label;\n",
-       "\n",
-       "\tInputWidgets.commInitializer(this);\n",
-       "    }\n",
-       "    Button.prototype = Widget;\n",
-       "\n",
-       "    var Text = function (typ, id, init) {\n",
-       "\tvar attr = { type:  \"text\",\n",
-       "\t\t     placeholder: init.label,\n",
-       "\t\t     value: init.value },\n",
-       "\t    elem = createElem(\"input\", attr),\n",
-       "\t    self = this;\n",
-       "\tthis.getState = function () {\n",
-       "\t    return elem.value;\n",
-       "\t}\n",
-       "\telem.onkeyup = function () {\n",
-       "\t    self.sendUpdate();\n",
-       "\t}\n",
-       "\n",
-       "\tthis.id = id;\n",
-       "\tthis.elem = elem;\n",
-       "\tthis.label = init.label;\n",
-       "\n",
-       "\tInputWidgets.commInitializer(this);\n",
-       "    }\n",
-       "    Text.prototype = Widget;\n",
-       "\n",
-       "    var Textarea = function (typ, id, init) {\n",
-       "\tvar attr = { placeholder: init.label },\n",
-       "\t    elem = createElem(\"textarea\", attr, init.value),\n",
-       "\t    self = this;\n",
-       "\tthis.getState = function () {\n",
-       "\t    return elem.value;\n",
-       "\t}\n",
-       "\telem.onchange = function () {\n",
-       "\t    self.sendUpdate();\n",
-       "\t}\n",
-       "\n",
-       "\tthis.id = id;\n",
-       "\tthis.elem = elem;\n",
-       "\tthis.label = init.label;\n",
-       "\n",
-       "\tInputWidgets.commInitializer(this);\n",
-       "    }\n",
-       "    Textarea.prototype = Widget;\n",
-       "\n",
-       "    // RadioButtons\n",
-       "    // Dropdown\n",
-       "    // HTML\n",
-       "    // Latex\n",
-       "\n",
-       "    var InputWidgets = {\n",
-       "\tSlider: Slider,\n",
-       "\tCheckbox: Checkbox,\n",
-       "\tButton: Button,\n",
-       "\tText: Text,\n",
-       "\tTextarea: Textarea,\n",
-       "\tdebug: false,\n",
-       "\tlog: function () {\n",
-       "\t    if (InputWidgets.debug) {\n",
-       "\t\tconsole.log.apply(console, arguments);\n",
-       "\t    }\n",
-       "\t},\n",
-       "\t// a central way to initalize communication\n",
-       "\t// for widgets.\n",
-       "\tcommInitializer: function (widget) {\n",
-       "\t    widget.sendUpdate = function () {};\n",
-       "\t}\n",
-       "    };\n",
-       "\n",
-       "    window.InputWidgets = InputWidgets;\n",
-       "\n",
-       "})(jQuery, undefined);\n",
-       "</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
        "<div id=\"interact-js-shim\">\n",
        "    <script charset=\"utf-8\">\n",
-       "(function (IPython, $, _, MathJax, Widgets) {\n",
+       "(function (IPython, $, _, MathJax) {\n",
        "    $.event.special.destroyed = {\n",
        "\tremove: function(o) {\n",
        "\t    if (o.handler) {\n",
@@ -232,7 +69,6 @@
        "\n",
        "\n",
        "    $(document).ready(function() {\n",
-       "\tWidgets.debug = false; // log messages etc in console.\n",
        "\tfunction initComm(evt, data) {\n",
        "\t    var comm_manager = data.kernel.comm_manager;\n",
        "        //_.extend(comm_manager.targets, require(\"widgets/js/widget\"))\n",
@@ -281,7 +117,7 @@
        "\t    $([IPython.events]).on('kernel_created.Kernel kernel_created.Session', initComm);\n",
        "\t}\n",
        "    });\n",
-       "})(IPython, jQuery, _, MathJax, InputWidgets);\n",
+       "})(IPython, jQuery, _, MathJax);\n",
        "</script>\n",
        "    <script>\n",
        "        window.interactLoadedFlag = true\n",
@@ -297,6 +133,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Method definition require(Symbol) in module Base at loading.jl:317 overwritten in module Main at /home/rdeits/.julia/v0.5/Requires/src/require.jl:12.\n",
+      "WARNING: Base.writemime is deprecated.\n",
+      "  likely near /home/rdeits/.julia/v0.5/Interact/src/IJulia/setup.jl:116\n",
+      "WARNING: Base.writemime is deprecated.\n",
+      "  likely near /home/rdeits/.julia/v0.5/Interact/src/IJulia/setup.jl:116\n"
+     ]
     }
    ],
    "source": [
@@ -367,7 +214,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -385,11 +232,8 @@
     {
      "data": {
       "text/plain": [
-       "DrakeVisualizer.Robot([DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),AffineTransforms.AffineTransform{Float64,3}:\n",
-       "matrix: 3x3 Array{Float64,2}:\n",
-       " 1.0  0.0  0.0\n",
-       " 0.0  1.0  0.0\n",
-       " 0.0  0.0  1.0\n",
+       "DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),AffineTransforms.AffineTransform{Float64,3}:\n",
+       "matrix: [1.0 0.0 0.0; 0.0 1.0 0.0; 0.0 0.0 1.0]\n",
        "translation: [0.0,0.0,0.0]\n",
        ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")])"
       ]
@@ -426,10 +270,7 @@
       "text/plain": [
        "1-element Array{DrakeVisualizer.Link,1}:\n",
        " DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),AffineTransforms.AffineTransform{Float64,3}:\n",
-       "matrix: 3x3 Array{Float64,2}:\n",
-       " 1.0  0.0  0.0\n",
-       " 0.0  1.0  0.0\n",
-       " 0.0  0.0  1.0\n",
+       "matrix: [1.0 0.0 0.0; 0.0 1.0 0.0; 0.0 0.0 1.0]\n",
        "translation: [0.0,0.0,0.0]\n",
        ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")"
       ]
@@ -512,7 +353,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -547,7 +388,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -568,7 +409,7 @@
      "data": {
       "text/html": [],
       "text/plain": [
-       "Interact.Slider{Float64}(Signal{Float64}(0.9795918367346939, nactions=0),\"x1\",0.9795918367346939,linspace(0.0,2.0,50),true)"
+       "Interact.Slider{Float64}(Signal{Float64}(0.9795918367346939, nactions=0),\"x1\",0.9795918367346939,linspace(0.0,2.0,50),\".3f\",true)"
       ]
      },
      "metadata": {},
@@ -578,7 +419,7 @@
      "data": {
       "text/html": [],
       "text/plain": [
-       "Interact.Slider{Float64}(Signal{Float64}(0.9795918367346939, nactions=0),\"x2\",0.9795918367346939,linspace(0.0,2.0,50),true)"
+       "Interact.Slider{Float64}(Signal{Float64}(0.9795918367346939, nactions=0),\"x2\",0.9795918367346939,linspace(0.0,2.0,50),\".3f\",true)"
       ]
      },
      "metadata": {},
@@ -592,7 +433,7 @@
      },
      "execution_count": 15,
      "metadata": {
-      "comm_id": "b39de85d-27fd-425f-a10c-02863db54543",
+      "comm_id": "91bc59f8-4d27-4467-a96e-5fe2dc977c9a",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -643,7 +484,7 @@
      "data": {
       "text/html": [],
       "text/plain": [
-       "Interact.Slider{Float64}(Signal{Float64}(-0.02040816326530612, nactions=0),\"iso_level\",-0.02040816326530612,linspace(-1.0,1.0,50),true)"
+       "Interact.Slider{Float64}(Signal{Float64}(-0.02040816326530612, nactions=0),\"iso_level\",-0.02040816326530612,linspace(-1.0,1.0,50),\".3f\",true)"
       ]
      },
      "metadata": {},
@@ -652,20 +493,17 @@
     {
      "data": {
       "text/plain": [
-       "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot([DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
+       "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
        "    vertices: 4900xFixedSizeArrays.Point{3,Float64},     faces: 9792xGeometryTypes.Face{3,Int64,0}, )\n",
        ",AffineTransforms.AffineTransform{Float64,3}:\n",
-       "matrix: 3x3 Array{Float64,2}:\n",
-       " 1.0  0.0  0.0\n",
-       " 0.0  1.0  0.0\n",
-       " 0.0  0.0  1.0\n",
+       "matrix: [1.0 0.0 0.0; 0.0 1.0 0.0; 0.0 0.0 1.0]\n",
        "translation: [0.0,0.0,0.0]\n",
-       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x320526de0>))"
+       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7f42585db450>))"
       ]
      },
      "execution_count": 17,
      "metadata": {
-      "comm_id": "b52b2192-6ebc-41bf-b6fb-44942f53ab6f",
+      "comm_id": "d65b8887-3ee8-41cc-b873-6ce47bb00d4c",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -683,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -693,15 +531,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.4.5",
+   "display_name": "Julia 0.5.0-rc3",
    "language": "julia",
-   "name": "julia-0.4"
+   "name": "julia-0.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.5"
+   "version": "0.5.0"
   }
  },
  "nbformat": 4,
