--- a/demo.ipynb
+++ b/demo.ipynb
@@ -20,7 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Activate the DrakeVisualizer package, and import some other \n",
+    "# useful functions\n",
+    "using DrakeVisualizer\n",
+    "import GeometryTypes: HyperRectangle, Vec, HomogenousMesh, SignedDistanceField\n",
+    "using CoordinateTransformations\n",
+    "import Meshing\n",
+    "import ColorTypes: RGBA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -138,28 +155,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: Method definition require(Symbol) in module Base at loading.jl:317 overwritten in module Main at /home/rdeits/.julia/v0.5/Requires/src/require.jl:12.\n",
       "WARNING: Base.writemime is deprecated.\n",
-      "  likely near /home/rdeits/.julia/v0.5/Interact/src/IJulia/setup.jl:116\n",
+      "  likely near /home/rdeits/locomotion/explorations/DrakeVisualizer.jl/v0.5/Interact/src/IJulia/setup.jl:116\n",
       "WARNING: Base.writemime is deprecated.\n",
-      "  likely near /home/rdeits/.julia/v0.5/Interact/src/IJulia/setup.jl:116\n"
+      "  likely near /home/rdeits/locomotion/explorations/DrakeVisualizer.jl/v0.5/Interact/src/IJulia/setup.jl:116\n"
      ]
     }
    ],
    "source": [
-    "# Activate the DrakeVisualizer package, and import some other \n",
-    "# useful functions\n",
-    "using DrakeVisualizer\n",
-    "import GeometryTypes: HyperRectangle, Vec, HomogenousMesh, SignedDistanceField\n",
-    "import Meshing\n",
-    "import AffineTransforms: tformtranslate, tformrotate\n",
-    "import ColorTypes: RGBA\n",
     "import Interact: @manipulate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +179,7 @@
        "GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -198,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -207,24 +216,24 @@
     "# We can use draw() to tell the viewer to draw the box at a specific\n",
     "# position. tformtranslate() creates an AffineTransform corresponding\n",
     "# to the given x; y; z translation.\n",
-    "draw(model, [tformtranslate([1;0;0])])"
+    "draw(model, [Translation(1.,0,0)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# We can also rotate the model by sending a different AffineTransform\n",
-    "draw(model, [tformrotate([0;0;1], pi/4)])"
+    "draw(model, [LinearMap(AngleAxis(pi/4, 0, 0, 1))])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -232,13 +241,10 @@
     {
      "data": {
       "text/plain": [
-       "DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),AffineTransforms.AffineTransform{Float64,3}:\n",
-       "matrix: [1.0 0.0 0.0; 0.0 1.0 0.0; 0.0 0.0 1.0]\n",
-       "translation: [0.0,0.0,0.0]\n",
-       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")])"
+       "DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -269,13 +275,10 @@
      "data": {
       "text/plain": [
        "1-element Array{DrakeVisualizer.Link,1}:\n",
-       " DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),AffineTransforms.AffineTransform{Float64,3}:\n",
-       "matrix: [1.0 0.0 0.0; 0.0 1.0 0.0; 0.0 0.0 1.0]\n",
-       "translation: [0.0,0.0,0.0]\n",
-       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")"
+       " DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -297,7 +300,7 @@
        "GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -319,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -334,14 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Now let's create a blue box\n",
-    "blue_box_data = GeometryData(box, tformtranslate([0;0;1.]), RGBA(0,0,1,0.5))\n",
+    "blue_box_data = GeometryData(box, Translation(0,0,1.), RGBA(0,0,1,0.5))\n",
     "\n",
     "# We can create a new Link that contains two geometries: the \n",
     "# green box and the blue box. \n",
@@ -351,14 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# And we can draw that new link wherever we like.\n",
-    "draw(model, [tformtranslate([0.75; 0; 0])])\n",
+    "draw(model, [Translation(0.75, 0, 0)])\n",
     "\n",
     "# Note that the green and blue boxes move together. That's\n",
     "# because they are part of the same rigid link. "
@@ -366,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -386,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -395,12 +398,12 @@
     "# Now that we have two links, we need to specify two transforms\n",
     "# for the draw() command. The order of the transforms matches\n",
     "# the order of the links in \"Robot([link1; link2])\"\n",
-    "draw(model, [tformtranslate([0.5; 0; 0]), tformtranslate([-0.5;0;0])])"
+    "draw(model, [Translation(0.5, 0, 0), Translation(-0.5, 0, 0)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -431,9 +434,9 @@
        "nothing"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {
-      "comm_id": "91bc59f8-4d27-4467-a96e-5fe2dc977c9a",
+      "comm_id": "7a85e7b4-2da4-4ac7-9c48-10e4cb25e021",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -442,13 +445,13 @@
    "source": [
     "# We can now move the two links independently\n",
     "@manipulate for x1 in linspace(0, 2), x2 in linspace(0, 2)\n",
-    "    draw(model, [tformtranslate([x1; 0; 0]); tformtranslate([x2; 0; 0])])\n",
+    "    draw(model, [Translation(x1, 0, 0); Translation(x2, 0, 0)])\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -475,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -493,17 +496,14 @@
     {
      "data": {
       "text/plain": [
-       "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
+       "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
        "    vertices: 4900xFixedSizeArrays.Point{3,Float64},     faces: 9792xGeometryTypes.Face{3,Int64,0}, )\n",
-       ",AffineTransforms.AffineTransform{Float64,3}:\n",
-       "matrix: [1.0 0.0 0.0; 0.0 1.0 0.0; 0.0 0.0 1.0]\n",
-       "translation: [0.0,0.0,0.0]\n",
-       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7f42585db450>))"
+       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7efcb8b8f750>))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {
-      "comm_id": "d65b8887-3ee8-41cc-b873-6ce47bb00d4c",
+      "comm_id": "452bfe0c-2163-496f-909f-402effefb477",
       "reactive": true
      },
      "output_type": "execute_result"
