--- a/demo.ipynb
+++ b/demo.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -168,7 +168,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "Interact.Slider{Int64}(Signal{Int64}(3, nactions=0),\"i\",3,1:5,\"d\",true)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {
+      "comm_id": "894ef58d-e179-4ddc-b769-22491e3b989c",
+      "reactive": true
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@manipulate for i = 1:5\n",
+    "    i\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +216,7 @@
        "GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -221,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -233,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -244,7 +281,7 @@
        "DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -278,7 +315,7 @@
        " DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -300,7 +337,7 @@
        "GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -322,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -337,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -354,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -369,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -389,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -403,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -434,9 +471,9 @@
        "nothing"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {
-      "comm_id": "7a85e7b4-2da4-4ac7-9c48-10e4cb25e021",
+      "comm_id": "8326e154-3f22-48c1-8fb7-66772c2664d6",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -451,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -478,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -498,12 +535,12 @@
       "text/plain": [
        "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
        "    vertices: 4900xFixedSizeArrays.Point{3,Float64},     faces: 9792xGeometryTypes.Face{3,Int64,0}, )\n",
-       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7efcb8b8f750>))"
+       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7efb440cd450>))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {
-      "comm_id": "452bfe0c-2163-496f-909f-402effefb477",
+      "comm_id": "82f389ee-c2e7-4ce4-a9a4-ffb2761477ca",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -540,6 +577,39 @@
    "mimetype": "application/julia",
    "name": "julia",
    "version": "0.5.0"
+  },
+  "widgets": {
+   "state": {
+    "12245b8a-b79e-467c-864b-cc30ca0d88c4": {
+     "views": [
+      {
+       "cell_index": 19
+      }
+     ]
+    },
+    "35f489bf-4b14-4bb7-8ca0-418671fe32fc": {
+     "views": [
+      {
+       "cell_index": 17
+      }
+     ]
+    },
+    "81b0d25d-387a-4695-9a4a-6cd168e7bd84": {
+     "views": [
+      {
+       "cell_index": 17
+      }
+     ]
+    },
+    "e01174fa-3514-4b07-ab4a-240739d2b5d7": {
+     "views": [
+      {
+       "cell_index": 3
+      }
+     ]
+    }
+   },
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
