simplify mesh construction by importing mesh converter from SpatialFields

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -156,9 +156,9 @@
      "output_type": "stream",
      "text": [
       "WARNING: Base.writemime is deprecated.\n",
-      "  likely near /home/rdeits/locomotion/explorations/DrakeVisualizer.jl/v0.5/Interact/src/IJulia/setup.jl:116\n",
+      "  likely near /home/rdeits/locomotion/explorations/point-cloud-signed-distance/packages/v0.5/Interact/src/IJulia/setup.jl:116\n",
       "WARNING: Base.writemime is deprecated.\n",
-      "  likely near /home/rdeits/locomotion/explorations/DrakeVisualizer.jl/v0.5/Interact/src/IJulia/setup.jl:116\n"
+      "  likely near /home/rdeits/locomotion/explorations/point-cloud-signed-distance/packages/v0.5/Interact/src/IJulia/setup.jl:116\n"
      ]
     }
    ],
@@ -214,8 +214,8 @@
    "outputs": [],
    "source": [
     "# We can use draw() to tell the viewer to draw the box at a specific\n",
-    "# position. tformtranslate() creates an AffineTransform corresponding\n",
-    "# to the given x; y; z translation.\n",
+    "# position. Translation() creates a CoordinateTransformations.Transformation\n",
+    "# corresponding to the given x; y; z translation.\n",
     "draw(model, [Translation(1.,0,0)])"
    ]
   },
@@ -227,7 +227,7 @@
    },
    "outputs": [],
    "source": [
-    "# We can also rotate the model by sending a different AffineTransform\n",
+    "# We can also rotate the model by sending a different transformation\n",
     "draw(model, [LinearMap(AngleAxis(pi/4, 0, 0, 1))])"
    ]
   },
@@ -306,6 +306,8 @@
     }
    ],
    "source": [
+    "# Here's the box we created. It's now the first (and only) geometry\n",
+    "# of the first (and only) link of the robot:\n",
     "model.robot.links[1].geometry_data[1].geometry"
    ]
   },
@@ -364,7 +366,7 @@
     "draw(model, [Translation(0.75, 0, 0)])\n",
     "\n",
     "# Note that the green and blue boxes move together. That's\n",
-    "# because they are part of the same rigid link. "
+    "# because they are part of the same rigid Link. "
    ]
   },
   {
@@ -436,7 +438,7 @@
      },
      "execution_count": 17,
      "metadata": {
-      "comm_id": "8326e154-3f22-48c1-8fb7-66772c2664d6",
+      "comm_id": "ca1a3696-0517-4f1a-a26d-396999e6d2dd",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -451,11 +453,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
+       "    vertices: 4952xFixedSizeArrays.Point{3,Float64},     faces: 9896xGeometryTypes.Face{3,Int64,0}, )\n",
+       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7fd672a2a240>))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Of course, we can draw much more interesting geometries than \n",
     "# just simple boxes. Let's create a triangulated mesh by finding\n",
@@ -464,21 +479,24 @@
     "# First, we'll define our function:\n",
     "f = x -> norm(x)^2 - abs(sin(atan2(x[2], x[1])))\n",
     "\n",
-    "# Then we sample that function within the volume from \n",
-    "# [-1; -1; -1] to [1; 1; 1]\n",
-    "sdf = SignedDistanceField(f, HyperRectangle(Vec(-1.,-1,-1), Vec(2.,2,2)))\n",
+    "# Then we pick a region of interest in which to sample the function.\n",
+    "# This region starts at (-1, -1, -1) and has width 2 along each axis:\n",
+    "bounds = HyperRectangle(Vec(-1.,-1,-1), Vec(2.,2,2))\n",
     "\n",
-    "# Next we find a mesh describing the 0-level set of that function\n",
-    "# using the marching tetrahedra algorithm\n",
-    "mesh = HomogenousMesh(sdf)\n",
+    "# Those two pieces of information are all we need to construct a robot\n",
+    "# geometry. For this, we'll need the GeometryData type:\n",
+    "geometry = GeometryData(f, bounds)\n",
+    "# Under the hood, this will sample f at regularly spaced points inside\n",
+    "# the bounding rectangle, then compute a surface that connects all the \n",
+    "# points for which f(x) = 0.\n",
     "\n",
-    "# And we can now load that mesh into the visualizer\n",
-    "model = Visualizer(mesh);"
+    "# And now we can load that geometry into the visualizer\n",
+    "model = Visualizer(geometry)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -498,35 +516,34 @@
       "text/plain": [
        "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
        "    vertices: 4900xFixedSizeArrays.Point{3,Float64},     faces: 9792xGeometryTypes.Face{3,Int64,0}, )\n",
-       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7efb440cd450>))"
+       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7fd69406f2d0>))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {
-      "comm_id": "82f389ee-c2e7-4ce4-a9a4-ffb2761477ca",
+      "comm_id": "67531eb6-6a33-4495-a9a8-86b92bbbe85a",
       "reactive": true
      },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# We can even manipulate the geometry by changing the function:\n",
+    "# We can even manipulate the geometry by changing the iso level. \n",
+    "# By default, GeometryData constructs a mesh connecting the points \n",
+    "# in space for which f(x) = 0, where 0 is called the isosurface level\n",
+    "# or iso level. But we can change that iso level to any number we want:\n",
+    "\n",
+    "f = x -> norm(x)^2 - abs(sin(atan2(x[2], x[1])))\n",
+    "bounds = HyperRectangle(Vec(-1.,-1,-1), Vec(2.,2,2))\n",
+    "\n",
     "@manipulate for iso_level in linspace(-1, 1)\n",
-    "    f = x -> norm(x)^2 - abs(sin(atan2(x[2], x[1]))) - iso_level\n",
-    "    sdf = SignedDistanceField(f, HyperRectangle(Vec(-1.1,-1.1,-1.1), Vec(2.2,2.2,2.2)))\n",
-    "    mesh = HomogenousMesh(sdf)\n",
-    "    model = Visualizer(mesh);\n",
-    "end"
+    "    geometry = GeometryData(f, bounds, iso_level)\n",
+    "    model = Visualizer(geometry);\n",
+    "end\n",
+    "\n",
+    "# Note that for high iso_level values our geometry gets cut off at the\n",
+    "# edges. We could fix that by replacing the bounds with a bigger box. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -543,24 +560,38 @@
   },
   "widgets": {
    "state": {
-    "12245b8a-b79e-467c-864b-cc30ca0d88c4": {
+    "5b2546e0-275a-4738-bae2-85d2926d1f31": {
      "views": [
       {
-       "cell_index": 19
+       "cell_index": 16
       }
      ]
     },
-    "35f489bf-4b14-4bb7-8ca0-418671fe32fc": {
+    "a5341cd8-0401-4de3-95b1-2536a2d9af8f": {
      "views": [
       {
-       "cell_index": 17
+       "cell_index": 18
       }
      ]
     },
-    "81b0d25d-387a-4695-9a4a-6cd168e7bd84": {
+    "cfd45129-c09d-4e30-9f7d-0866e9754534": {
      "views": [
       {
-       "cell_index": 17
+       "cell_index": 16
+      }
+     ]
+    },
+    "daa53e37-5043-456b-afbd-384c38442657": {
+     "views": [
+      {
+       "cell_index": 16
+      }
+     ]
+    },
+    "f4a6f749-0600-4cf7-81d2-6b717291493c": {
+     "views": [
+      {
+       "cell_index": 16
       }
      ]
     }
