pass mesh bounds as vectors, not as HyperRectangle

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -20,11 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Precompiling module DrakeVisualizer...\n"
+     ]
+    }
+   ],
    "source": [
     "# Activate the DrakeVisualizer package, and import some other \n",
     "# useful functions\n",
@@ -37,138 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"interact-js-shim\">\n",
-       "    <script charset=\"utf-8\">\n",
-       "(function (IPython, $, _, MathJax) {\n",
-       "    $.event.special.destroyed = {\n",
-       "\tremove: function(o) {\n",
-       "\t    if (o.handler) {\n",
-       "\t\to.handler.apply(this, arguments)\n",
-       "\t    }\n",
-       "\t}\n",
-       "    }\n",
-       "\n",
-       "    var OutputArea = IPython.version >= \"4.0.0\" ? require(\"notebook/js/outputarea\").OutputArea : IPython.OutputArea;\n",
-       "\n",
-       "    var redrawValue = function (container, type, val) {\n",
-       "\tvar selector = $(\"<div/>\");\n",
-       "\tvar oa = new OutputArea(_.extend(selector, {\n",
-       "\t    selector: selector,\n",
-       "\t    prompt_area: true,\n",
-       "\t    events: IPython.events,\n",
-       "\t    keyboard_manager: IPython.keyboard_manager\n",
-       "\t})); // Hack to work with IPython 2.1.0\n",
-       "\n",
-       "\tswitch (type) {\n",
-       "\tcase \"image/png\":\n",
-       "            var _src = 'data:' + type + ';base64,' + val;\n",
-       "\t    $(container).find(\"img\").attr('src', _src);\n",
-       "\t    break;\n",
-       "\tdefault:\n",
-       "\t    var toinsert = OutputArea.append_map[type].apply(\n",
-       "\t\toa, [val, {}, selector]\n",
-       "\t    );\n",
-       "\t    $(container).empty().append(toinsert.contents());\n",
-       "\t    selector.remove();\n",
-       "\t}\n",
-       "\tif (type === \"text/latex\" && MathJax) {\n",
-       "\t    MathJax.Hub.Queue([\"Typeset\", MathJax.Hub, toinsert.get(0)]);\n",
-       "\t}\n",
-       "    }\n",
-       "\n",
-       "\n",
-       "    $(document).ready(function() {\n",
-       "\tfunction initComm(evt, data) {\n",
-       "\t    var comm_manager = data.kernel.comm_manager;\n",
-       "        //_.extend(comm_manager.targets, require(\"widgets/js/widget\"))\n",
-       "\t    comm_manager.register_target(\"Signal\", function (comm) {\n",
-       "            comm.on_msg(function (msg) {\n",
-       "                //Widgets.log(\"message received\", msg);\n",
-       "                var val = msg.content.data.value;\n",
-       "                $(\".signal-\" + comm.comm_id).each(function() {\n",
-       "                var type = $(this).data(\"type\");\n",
-       "                if (val[type]) {\n",
-       "                    redrawValue(this, type, val[type], type);\n",
-       "                }\n",
-       "                });\n",
-       "                delete val;\n",
-       "                delete msg.content.data.value;\n",
-       "            });\n",
-       "\t    });\n",
-       "\n",
-       "\t    // coordingate with Comm and redraw Signals\n",
-       "\t    // XXX: Test using Reactive here to improve performance\n",
-       "\t    $([IPython.events]).on(\n",
-       "\t\t'output_appended.OutputArea', function (event, type, value, md, toinsert) {\n",
-       "\t\t    if (md && md.reactive) {\n",
-       "                // console.log(md.comm_id);\n",
-       "                toinsert.addClass(\"signal-\" + md.comm_id);\n",
-       "                toinsert.data(\"type\", type);\n",
-       "                // Signal back indicating the mimetype required\n",
-       "                var comm_manager = IPython.notebook.kernel.comm_manager;\n",
-       "                var comm = comm_manager.comms[md.comm_id];\n",
-       "                comm.then(function (c) {\n",
-       "                    c.send({action: \"subscribe_mime\",\n",
-       "                       mime: type});\n",
-       "                    toinsert.bind(\"destroyed\", function() {\n",
-       "                        c.send({action: \"unsubscribe_mime\",\n",
-       "                               mime: type});\n",
-       "                    });\n",
-       "                })\n",
-       "\t\t    }\n",
-       "\t    });\n",
-       "\t}\n",
-       "\n",
-       "\ttry {\n",
-       "\t    // try to initialize right away. otherwise, wait on the status_started event.\n",
-       "\t    initComm(undefined, IPython.notebook);\n",
-       "\t} catch (e) {\n",
-       "\t    $([IPython.events]).on('kernel_created.Kernel kernel_created.Session', initComm);\n",
-       "\t}\n",
-       "    });\n",
-       "})(IPython, jQuery, _, MathJax);\n",
-       "</script>\n",
-       "    <script>\n",
-       "        window.interactLoadedFlag = true\n",
-       "       $(\"#interact-js-shim\").bind(\"destroyed\", function () {\n",
-       "           if (window.interactLoadedFlag) {\n",
-       "               console.warn(\"JavaScript required by Interact will be removed if you remove this cell or run using Interact more than once.\")\n",
-       "           }\n",
-       "       })\n",
-       "       $([IPython.events]).on(\"kernel_starting.Kernel kernel_restarting.Kernel\", function () { window.interactLoadedFlag = false })\n",
-       "   </script>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Base.writemime is deprecated.\n",
-      "  likely near /home/rdeits/locomotion/explorations/point-cloud-signed-distance/packages/v0.5/Interact/src/IJulia/setup.jl:116\n",
-      "WARNING: Base.writemime is deprecated.\n",
-      "  likely near /home/rdeits/locomotion/explorations/point-cloud-signed-distance/packages/v0.5/Interact/src/IJulia/setup.jl:116\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import Interact: @manipulate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +67,7 @@
        "GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -221,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -233,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -244,7 +132,7 @@
        "DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -278,7 +166,7 @@
        " DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -300,7 +188,7 @@
        "GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -324,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -339,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -356,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -371,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -391,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -405,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -436,9 +324,9 @@
        "nothing"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {
-      "comm_id": "ca1a3696-0517-4f1a-a26d-396999e6d2dd",
+      "comm_id": "59db85ec-bb36-4965-972e-3ea6706df011",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -453,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -463,10 +351,10 @@
       "text/plain": [
        "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
        "    vertices: 4952xFixedSizeArrays.Point{3,Float64},     faces: 9896xGeometryTypes.Face{3,Int64,0}, )\n",
-       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7fd672a2a240>))"
+       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7efbcbbad2d0>))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,12 +368,13 @@
     "f = x -> norm(x)^2 - abs(sin(atan2(x[2], x[1])))\n",
     "\n",
     "# Then we pick a region of interest in which to sample the function.\n",
-    "# This region starts at (-1, -1, -1) and has width 2 along each axis:\n",
-    "bounds = HyperRectangle(Vec(-1.,-1,-1), Vec(2.,2,2))\n",
+    "# This region starts at (-1, -1, -1) and extends to (1, 1, 1):\n",
+    "lower_bound = Vec(-1.,-1,-1)\n",
+    "upper_bound = Vec(1., 1, 1)\n",
     "\n",
     "# Those two pieces of information are all we need to construct a robot\n",
     "# geometry. For this, we'll need the GeometryData type:\n",
-    "geometry = GeometryData(f, bounds)\n",
+    "geometry = GeometryData(f, lower_bound, upper_bound)\n",
     "# Under the hood, this will sample f at regularly spaced points inside\n",
     "# the bounding rectangle, then compute a surface that connects all the \n",
     "# points for which f(x) = 0.\n",
@@ -496,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -516,12 +405,12 @@
       "text/plain": [
        "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot(DrakeVisualizer.Link[DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
        "    vertices: 4900xFixedSizeArrays.Point{3,Float64},     faces: 9792xGeometryTypes.Face{3,Int64,0}, )\n",
-       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7fd69406f2d0>))"
+       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7efbcbbad300>))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 36,
      "metadata": {
-      "comm_id": "67531eb6-6a33-4495-a9a8-86b92bbbe85a",
+      "comm_id": "8e3c8d79-b9c7-40f0-aa9c-01d6b09649b5",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -534,16 +423,26 @@
     "# or iso level. But we can change that iso level to any number we want:\n",
     "\n",
     "f = x -> norm(x)^2 - abs(sin(atan2(x[2], x[1])))\n",
-    "bounds = HyperRectangle(Vec(-1.,-1,-1), Vec(2.,2,2))\n",
+    "lower_bound = Vec(-1.,-1,-1)\n",
+    "upper_bound = Vec(1., 1, 1)\n",
     "\n",
     "@manipulate for iso_level in linspace(-1, 1)\n",
-    "    geometry = GeometryData(f, bounds, iso_level)\n",
+    "    geometry = GeometryData(f, lower_bound, upper_bound, iso_level)\n",
     "    model = Visualizer(geometry);\n",
     "end\n",
     "\n",
     "# Note that for high iso_level values our geometry gets cut off at the\n",
     "# edges. We could fix that by replacing the bounds with a bigger box. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -560,35 +459,35 @@
   },
   "widgets": {
    "state": {
-    "5b2546e0-275a-4738-bae2-85d2926d1f31": {
+    "0d0baa8b-124d-457f-8c79-82ac2498620b": {
      "views": [
       {
        "cell_index": 16
       }
      ]
     },
-    "a5341cd8-0401-4de3-95b1-2536a2d9af8f": {
+    "4f42b453-edd3-4633-8380-cc89bfb9dc8e": {
+     "views": [
+      {
+       "cell_index": 16
+      }
+     ]
+    },
+    "519be6aa-5309-4185-ac08-40f6f5b2b07f": {
      "views": [
       {
        "cell_index": 18
       }
      ]
     },
-    "cfd45129-c09d-4e30-9f7d-0866e9754534": {
+    "e58a7c12-1367-4469-9b28-17ff28f257fe": {
      "views": [
       {
        "cell_index": 16
       }
      ]
     },
-    "daa53e37-5043-456b-afbd-384c38442657": {
-     "views": [
-      {
-       "cell_index": 16
-      }
-     ]
-    },
-    "f4a6f749-0600-4cf7-81d2-6b717291493c": {
+    "eedbcf84-af84-4878-8b43-71d7e642e744": {
      "views": [
       {
        "cell_index": 16
